--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,35 @@
 # Zeppelin ignored files
 /ZeppelinRemoteNotebooks/
 
+
+# 1. Files related to Project Management
+# 1.1. System Files
+.DS_Store
+
+# 1.2. App-related Files
+# 1.2.1. RStudio
+.Rhistory
+.Rproj.user
+*.Rproj
+
+# 1.2.2. VS Code
+.vscode/settings.json
+
+# 1.2.3. Python
+# 1.2.3.1. Cash Files
+**/__pycache__/**
+__init__.py
+
+# 1.2.4. Texpad
+**/.texpadtmp/**
+
+# 1.2.5. Pycharm
 .idea
+
+
+# 2. Datasets
+# ## Note: Data files will be stored in Dropbox.
+**/*.zip
+**/*.dta
+**/*.RData
+**/*.parquet
